# cpp-qt-calculator

./: CMakeLists.txt  README.md
src/: calculator.cpp  calculator.h  main.cpp
